[package]
name = "lottery"
version = "0.1.0"
edition = "2021"

[lib]
name = "lottery"
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
blake3 = { version = "1.8.2", features = ["no_avx2", "no_avx512", "no_sse2", "no_sse41"] }
